--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-<wb-module deploy-name="cheetah">
+<wb-module deploy-name="mifos">
 <wb-resource deploy-path="/" source-path="/WebContent"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
@@ -12,7 +12,7 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/test/resources"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testing/src/test/resources"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testing/src/test/java"/>
-<property name="context-root" value="cheetah"/>
+<property name="context-root" value="mifos"/>
 <property name="java-output-path"/>
 </wb-module>
 </project-modules>
