--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -1,3 +1,84 @@
+/********************************/
+ /* BEGIN ADDITIONS FOR CHEETAH */
+ ********************************/
+
+.page-content {
+	padding-top: 15px;
+	min-height: 480px;
+	background-color: white;
+	}
+
+#login {
+	background-color: white;
+	margin:auto;
+	width: 450px;
+	border:1px #d7deee solid;
+	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-size: small;
+	color: black;
+	overflow: hidden; /* a trick to get the div to stretch to accommodate the floats inside */
+	}
+
+#login-header {
+	text-align: left;
+	background-color: #d7deee;
+	font-size: larger;
+	font-weight: bold;
+	padding: 2px 10px 2px 10px;
+	}
+
+#login-welcome {
+	text-align: left;
+	width: 30%;
+	float: left;
+	padding-left: 10px;
+	padding-top: 10px;
+	height: auto;
+	}
+
+#login-interaction {
+	width: 60%;
+	float: right;
+	overflow: hidden;
+	border-left:1px #d7deee solid;
+	}
+
+#login-table {
+	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-size: small;
+	min-width: 300px;
+	border-left:1px #d7deee solid;
+	padding: 0px 10px 10px 10px;
+	}
+
+table#login-table td.label {
+	text-align: right;
+	}
+
+table#login-table td#login-submit {
+	padding-top: 20px;
+	}
+
+#login-page-header {
+	background-attachment: scroll;
+	background-image: url(../images/logo.gif);
+	background-repeat: no-repeat;
+	background-position: left top;
+	background-color: white;
+	height: 75px;
+	width: 100%;
+	border-bottom: 6px orange solid;
+	}
+
+.error-messages {
+	color: red;
+	font-weight: bold;
+	padding: 10px 10px 0px 10px;
+	
+/******************************/
+ /* END ADDITIONS FOR CHEETAH */
+ ******************************/
+
 body {margin:0px; background-color:#F2F2F2;}
 a {
 	text-decoration:underline; 
@@ -179,7 +260,7 @@ a:hover {
 	border-bottom: #926030 1px solid;
 	border-left: #C29F7C 1px solid;
 	border-top: #C29F7C 1px solid;
-    background-image: url(../images/buttonbg.jpg);
+    background-image: url(../images/buttons/buttonbg.jpg);
 	background-repeat: repeat-x;
     cursor: pointer;
     height: 20px
@@ -605,3 +686,4 @@ select {
 	height: 25px;
 
 }
+	
