--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -1,6 +1,21 @@
 /********************************/
- /* BEGIN ADDITIONS FOR CHEETAH */
- ********************************/
+/* BEGIN ADDITIONS FOR CHEETAH */
+/********************************/
+
+#homePageHeader{border-bottom: 6px #FF9600 solid;}
+#logo{float:left}
+#top-menu-bar{padding:0px 0px 0 0px;margin:0px 0 0px 0;}
+ul#simple-menu{list-style-type:none;position:relative;height:63px;font-family:Arial,Verdana, Helvetica, sans-serif;font-size:9pt;font-weight:bold;margin:0px 0 0 0;padding:11px 0 0 0;}
+ul#simple-menu li{display:block;float:left;margin:34px 0 0 2px;height:27px;}
+ul#simple-menu li.left{margin:0;}
+ul#simple-menu li a{display:block;float:left;color:#000166;background:#F2D1A6;line-height:27px;text-decoration:none;padding:0 17px 0 18px;height:27px;}
+ul#simple-menu li a.right{padding-right:19px;}
+ul#simple-menu li a:hover{background:#FF9600;}
+ul#simple-menu li a.current{color:#000166;background:#FF9600;}
+ul#simple-menu li a.current:hover{color:#000166;background:#FF9600;}
+
+#top-right-links{}
+a#logout{float:right;height:20px;margin:8px 18px 0 0;font-family: Arial, Verdana, Helvetica, sans-serif;font-size: 9pt;color:#:#000000;}
 
 .page-content {
 	padding-top: 15px;
@@ -76,8 +91,8 @@ table#login-table td#login-submit {
 	padding: 10px 10px 0px 10px;
 	
 /******************************/
- /* END ADDITIONS FOR CHEETAH */
- ******************************/
+/* END ADDITIONS FOR CHEETAH */
+/******************************/
 
 body {margin:0px; background-color:#F2F2F2;}
 a {
@@ -686,4 +701,8 @@ select {
 	height: 25px;
 
 }
+
+
+
+
 	
