marked DefaultAdminUserCanLoginStoryTest workInProgress; added application info page for svn revision and build tag
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13662 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -12,6 +12,8 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/test/resources"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testing/src/test/resources"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testing/src/test/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/main/webapp/WEB-INF/freemarker"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/main/webapp/css"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
