--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -2,7 +2,7 @@
 /* BEGIN ADDITIONS FOR CHEETAH */
 /********************************/
 
-#homePageHeader{border-bottom: 6px #FF9600 solid;}
+#homePageHeader {border-bottom: 6px #FF9600 solid;}
 #logo{float:left}
 #top-menu-bar{padding:0px 0px 0 0px;margin:0px 0 0px 0;}
 ul#simple-menu{list-style-type:none;position:relative;height:63px;font-family:Arial,Verdana, Helvetica, sans-serif;font-size:9pt;font-weight:bold;margin:0px 0 0 0;padding:11px 0 0 0;}
@@ -166,7 +166,7 @@ form .required{ /* uses class instead of div, more efficient */
 /* END ADDITIONS FOR CHEETAH */
 /******************************/
 
-body {margin:0px; background-color:#F2F2F2;}
+body {margin:0px; background-color:#FFFFF;}
 a {
 	text-decoration:underline; 
 	font-family: Arial, Verdana, Helvetica, sans-serif;
