--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -2,20 +2,77 @@
 /* BEGIN ADDITIONS FOR CHEETAH */
 /********************************/
 
-#homePageHeader {border-bottom: 6px #FF9600 solid;}
-#logo{float:left}
-#top-menu-bar{padding:0px 0px 0 0px;margin:0px 0 0px 0;}
-ul#simple-menu{list-style-type:none;position:relative;height:63px;font-family:Arial,Verdana, Helvetica, sans-serif;font-size:9pt;font-weight:bold;margin:0px 0 0 0;padding:11px 0 0 0;}
-ul#simple-menu li{display:block;float:left;margin:34px 0 0 2px;height:27px;}
-ul#simple-menu li.left{margin:0;}
-ul#simple-menu li a{display:block;float:left;color:#000166;background:#F2D1A6;line-height:27px;text-decoration:none;padding:0 17px 0 18px;height:27px;}
-ul#simple-menu li a.right{padding-right:19px;}
-ul#simple-menu li a:hover{background:#FF9600;}
-ul#simple-menu li a.current{color:#000166;background:#FF9600;}
-ul#simple-menu li a.current:hover{color:#000166;background:#FF9600;}
+#homePageHeader { 
+   border-bottom: 6px #FF9600 solid; 
+}
 
-#top-right-links{}
-a#logout{float:right;height:20px;margin:8px 18px 0 0;font-family: Arial, Verdana, Helvetica, sans-serif;font-size: 9pt;color:#000000;}
+#logo { 
+   float:left; 
+}
+
+#top-menu-bar { 
+   padding:0px 0px 0 0px;
+   margin:0px 0 0px 0;
+}
+
+ul#simple-menu {
+   list-style-type:none;
+   position:relative;
+   height:63px;
+   font-family:Arial,Verdana, Helvetica, sans-serif;
+   font-size:9pt;
+   font-weight:bold;margin:0px 0 0 0;
+   padding:11px 0 0 0;
+}
+
+ul#simple-menu li {
+      display:block;
+      float:left;
+      margin:34px 0 0 2px;
+      height:27px;
+   }
+
+ul#simple-menu li.left {
+   margin:0; 
+}
+
+ul#simple-menu li a {
+   display:block;
+   float:left;
+   color:#000166;background:#F2D1A6;
+   line-height:27px;
+   text-decoration:none;
+   padding:0 17px 0 18px;
+   height:27px;
+}
+ul#simple-menu li a.right {
+   padding-right:19px;
+}
+
+ul#simple-menu li a:hover{
+   background:#FF9600;
+}
+
+ul#simple-menu li a.current{
+   color:#000166;
+   background:#FF9600;
+}
+
+ul#simple-menu li a.current:hover {
+   color:#000166;
+   background:#FF9600;
+}
+
+#top-right-links { }
+
+a#logout {
+   float:right;
+   height:20px;
+   margin:8px 18px 0 0;
+   font-family: Arial, Verdana, Helvetica, sans-serif;
+   font-size: 9pt;
+   color:#000000;
+}
 
 p.boldOrange {
 	text-decoration:none; 
@@ -23,7 +80,7 @@ p.boldOrange {
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 	font-size: 9pt;
 	font-weight: bold;	
-	}
+}
 	
 .page-content {
 	padding-top: 15px;
@@ -32,7 +89,7 @@ p.boldOrange {
 	margin-left: 5px;
 	margin-right: 5px;
 	font-size: small;
-	}
+}
 
 #login {
 	background-color: white;
@@ -43,7 +100,7 @@ p.boldOrange {
 	font-size: small;
 	color: black;
 	overflow: hidden; /* a trick to get the div to stretch to accommodate the floats inside */
-	}
+}
 
 #login-header {
 	text-align: left;
@@ -51,7 +108,7 @@ p.boldOrange {
 	font-size: larger;
 	font-weight: bold;
 	padding: 2px 10px 2px 10px;
-	}
+}
 
 #login-welcome {
 	text-align: left;
@@ -60,14 +117,14 @@ p.boldOrange {
 	padding-left: 10px;
 	padding-top: 10px;
 	height: auto;
-	}
+}
 
 #login-interaction {
 	width: 60%;
 	float: right;
 	overflow: hidden;
 	border-left:1px #d7deee solid;
-	}
+}
 
 #login-table {
 	font-family: Arial, Verdana, Helvetica, sans-serif;
@@ -75,15 +132,15 @@ p.boldOrange {
 	min-width: 300px;
 	border-left:1px #d7deee solid;
 	padding: 0px 10px 10px 10px;
-	}
+}
 
 table#login-table td.label {
 	text-align: right;
-	}
+}
 
 table#login-table td#login-submit {
 	padding-top: 20px;
-	}
+}
 
 #login-page-header {
 	background-attachment: scroll;
@@ -94,7 +151,7 @@ table#login-table td#login-submit {
 	height: 75px;
 	width: 100%;
 	border-bottom: 6px orange solid;
-	}
+}
 
 .error-messages {
 	color: red;
