Hooked up the adminHome page to the admin tab and tweaked it a bit.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13676 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -2,6 +2,14 @@
 /* BEGIN ADDITIONS FOR CHEETAH */
 /********************************/
 
+.fontnormalboldorangeheading {
+
+	text-decoration:none; 
+	color:#CC6601;
+	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-size: 11pt;
+	font-weight: bold;
+}
 #homePageHeader { 
    border-bottom: 6px #FF9600 solid; 
 }
