--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -226,7 +226,49 @@ form small {
 form .required{ /* uses class instead of div, more efficient */
 	font-weight:bold;
 }
-	
+
+/* Left pane */
+
+#left-pane {
+   margin-top: 5px;
+   height: 300px;
+   background:#F2D1A6;
+   width: 180px;
+}
+
+#left-pane-top-spacer {
+   height: 3px;
+   background-color: #FFFFFF;
+}
+
+#left-pane-header {
+   padding-top: 2px;
+   padding-bottom: 2px;
+   padding-left: 4px;
+   font-family: Arial, Verdana, Helvetica, sans-serif;
+   font-size: 10pt;
+   font-weight: bold;
+   color:#FFFFFF;
+   background-color:#FF9600;
+   }
+
+#left-pane-content {
+   padding-left: 5px;
+   font-family: Arial, Verdana, Helvetica, sans-serif;
+   font-size: 9pt;
+}
+
+#left-pane-content h2 {
+   padding-left: 5px;
+   font-family: Arial, Verdana, Helvetica, sans-serif;
+   font-size: 9pt;
+}
+
+#left-pane-content a {
+   font-weight: normal;
+   font-size: 9pt;
+}
+
 /******************************/
 /* END ADDITIONS FOR CHEETAH */
 /******************************/
