Preliminary checkin for story 678 - http://mingle.mifos.org:7070/projects/cheetah/cards/678
Includes initial versions of classes, web pages, and Spring configuration files, many of which are not yet functional.

git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13689 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -94,9 +94,14 @@ p.boldOrange {
 	padding-top: 15px;
 	min-height: 480px;
 	background-color: white;
-	margin-left: 5px;
-	margin-right: 5px;
-	font-size: small;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.page-content h2 {
+	color: #CC6601;
+	font-size: large;
+	font-weight: bold;
 }
 
 #login {
@@ -167,38 +172,40 @@ table#login-table td#login-submit {
 	padding: 10px 10px 0px 10px;
 }
 
-/* styles for login form */
-	
+/* default styles for forms */
 
 form {  /* set width in form, not fieldset (still takes up more room w/ fieldset width */
-  font-family:verdana,arial,sans-serif;
   margin: 0;
   padding: 0;
-  min-width: 400px;
-  max-width: 600px;
-  width: 4500px;
+
 }
 
-form fieldset.login {  /* Setting border-color for the tag alone does not work in Firefox */
+form fieldset {  /* Setting border-color for the tag alone does not work in Firefox */
 	border-color: #d7deee;
-	border-width: 1px;
+	border-width: 2px;
   border-style: solid;
-  padding: 10px;        /* padding in fieldset support spotty in IE */
+  padding: 10px;
   margin: 0;
 }
 
 form fieldset legend {
-	font-size:1.1em; /* bump up legend font size, not too large or it'll overwrite border on left */
+	font-size:medium; /* bump up legend font size, not too large or it'll overwrite border on left */
                        /* be careful with padding, it'll shift the nice offset on top of border  */
 }
 
 form label {
 	display: block;  /* block float the labels to left column, set a width */
 	float: left;
-	width: 100px;
 	padding: 0;
 	margin: 5px 0 0; /* set top margin same as form input - textarea etc. elements */
 	text-align: right;
+}
+
+form input, form textarea, form select {
+	/* display: inline; inline display must not be set or will hide submit buttons in IE 5x mac */
+	width:auto;      /* set width of form elements to auto-size, otherwise watch for wrap on resize */
+	margin:5px 0 0 10px; /* set margin on left of form elements rather than right of
+                              label aligns textarea better in IE */
 }
 
 form fieldset label:first-letter { /* use first-letter pseudo-class to underline accesskey, note that */
@@ -207,13 +214,6 @@ form fieldset label:first-letter { /* use first-letter pseudo-class to underline
                                     /* we instead underline first letter on each label element and accesskey */
                                     /* each input. doing only legends would  lessens cognitive load */
                                    /* opera breaks after first letter underlined legends but not labels */
-}
-
-form input, form textarea {
-	/* display: inline; inline display must not be set or will hide submit buttons in IE 5x mac */
-	width:auto;      /* set width of form elements to auto-size, otherwise watch for wrap on resize */
-	margin:5px 0 0 10px; /* set margin on left of form elements rather than right of
-                              label aligns textarea better in IE */
 }
 
 form small {
@@ -225,6 +225,24 @@ form small {
 
 form .required{ /* uses class instead of div, more efficient */
 	font-weight:bold;
+}
+
+/* form styles for login */
+
+form#login {
+  min-width: 400px;
+  max-width: 600px;
+  width: 450px;
+}
+
+/* form loan product overrides */
+
+form.loan-product {
+	width: 600px;
+}
+
+form.loan-product fieldset label{
+	width: 300px;
 }
 
 /* Left pane */
