Revised adminHome.ftl and associated css styles to clearly separate structure from layout. For example
* In the .ftl, replacing explicit font styles with heading styles
* in cssstyle.css, using styles to format the headings in the context of a page-context block.

My goal is to flesh out a style guideline for Mifos, with these pages as illustrations.

git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13690 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -98,9 +98,25 @@ p.boldOrange {
 	padding-right: 5px;
 }
 
+.page-content {
+	font-family: Arial, Verdana, Helvetica, sans-serif;
+		}
+	
 .page-content h2 {
 	color: #CC6601;
+	font-size: x-large;
+	font-weight: bold;
+}
+
+.page-content h3 {
+	color: #CC6601;
 	font-size: large;
+	font-weight: bold;
+}
+
+.page-content h4 {
+	color: black;
+	font-size: medium;
 	font-weight: bold;
 }
 
@@ -294,8 +310,6 @@ form.loan-product fieldset label{
 body {margin:0px; background-color:#FFFFF;}
 a {
 	text-decoration:underline; 
-	font-family: Arial, Verdana, Helvetica, sans-serif;
-	font-size: 9pt;
 	color:#000166;
 }
 a:visited{
