--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -71,19 +71,20 @@ ul#simple-menu li a.current:hover {
    background:#FF9600;
 }
 
-#top-right-links { }
+#top-right-links {
+   width: 100%;
+   text-align: right;
+}
 
 a#logout {
-   float:right;
    height:20px;
    margin:8px 18px 0 0;
-   font-family: Arial, Verdana, Helvetica, sans-serif;
+   font-family: Arial, Verdana, Helvetica, sans-serif;  
    font-size: 9pt;
-   color:#000000;
 }
 
 p.boldOrange {
-	text-decoration:none; 
+	text-decoration:none;  
 	color:#CC6601;
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 	font-size: 9pt;
@@ -265,6 +266,7 @@ form.loan-product fieldset label{
 
 #left-pane {
    margin-top: 5px;
+   float: left;
    height: 300px;
    background:#F2D1A6;
    width: 180px;
@@ -300,8 +302,42 @@ form.loan-product fieldset label{
 
 #left-pane-content a {
    font-weight: normal;
-   font-size: 9pt;
+   font-size: 9pt;  
 }
+
+#content-pane {
+   margin-top: 5px;
+   margin-left: 5px; 
+   width:500px;  
+}
+
+/* create client page */
+#createClient form { 
+  font-family:verdana,arial,sans-serif;
+  margin: 0;
+  padding: 0;
+  min-width: 400px;
+  max-width: 800px;
+  width: 4500px;
+}
+
+form fieldset.createClient {
+  border-width: 1px;
+  border-style: none;
+  padding: 10px;
+  margin: 0;
+}
+
+form fieldset.createClient legend {
+   font-family: Arial, Verdana, Helvetica, sans-serif;
+   font-size: 12pt;
+}
+
+form fieldset.createClient label {
+   font-family: Arial, Verdana, Helvetica, sans-serif;
+   font-size: 11pt;
+}
+
 
 /******************************/
 /* END ADDITIONS FOR CHEETAH */
