Added a left navigation pane to the home page.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13754 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -2,6 +2,10 @@
 /* BEGIN ADDITIONS FOR CHEETAH */
 /********************************/
 
+.left-pane-heading-group {
+	margin:0 0 0 10px;
+}
+
 .fontnormalboldorangeheading {
 
 	text-decoration:none; 
@@ -12,6 +16,10 @@
 }
 #homePageHeader { 
    border-bottom: 6px #FF9600 solid; 
+}
+
+#homePageContent {
+	margin:0 0 0 200px;
 }
 
 #logo { 
