Added field to show what loan product is being used when creating a loan.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13841 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -2,6 +2,10 @@
 /* BEGIN ADDITIONS FOR CHEETAH */
 /********************************/
 
+#loanProductName {
+   text-align: left;
+}
+
 .left-pane-heading-group {
 	margin:0 0 0 10px;
 }
