addition of first acceptance test for create client - create valid client - more test cases to come
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13843 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -88,6 +88,13 @@ ul#simple-menu li a.current:hover {
    text-align: right;
 }
 
+a#settings {
+   height:20px;
+   margin:0 0 0 0;
+   font-family: Arial, Verdana, Helvetica, sans-serif;  
+   font-size: 9pt;
+}
+
 a#logout {
    height:20px;
    margin:8px 18px 0 0;
