Cleaned up admin home page -- used a CSS style to format navigation lists.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13844 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -366,6 +366,25 @@ form fieldset.createClient label {
    font-size: 11pt;
 }
 
+/* Display a list on one line, each entry separated by "|" */
+.navigation-list
+{
+list-style: none;
+padding: 0;
+margin: 0 0 0 10pt;
+}
+
+.navigation-list li
+{
+display: inline;
+padding: 0;
+margin: 0;
+}
+
+.navigation-list li:before { content: "| "; }
+.navigation-list li:first-child:before { content: ""; }
+}
+
 
 /******************************/
 /* END ADDITIONS FOR CHEETAH */
