Added client detail and loan detail placeholder pages with navigation.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13854 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -2,6 +2,33 @@
 /* BEGIN ADDITIONS FOR CHEETAH */
 /********************************/
 
+#clientsAndAccountsPage {
+	margin: 0 0 0 200px;
+}
+
+#loanDetailPage {
+	margin: 0 0 0 200px;
+}
+
+#clientDetailPage-loanList {
+	margin: 0 0 0 20px;
+}
+
+#clientDetailPage-loanSectionHeading {
+	margin: 0 0 0 10px;
+}
+
+#clientDetailPage-loanSection {
+	background-color: #d7deee;
+	width: 400px;
+	height: 200px;
+	margin: 0 0 0 0px;	
+}
+
+#clientDetailPage {
+	margin: 0 0 0 200px;
+}
+
 #loanProductName {
    text-align: left;
 }
@@ -294,7 +321,7 @@ form.loan-product fieldset label{
 /* Left pane */
 
 #left-pane {
-   margin-top: 5px;
+   margin-top: 2px;
    float: left;
    height: 400px;
    background:#F2D1A6;
