removed code duplication by moving DatabaseTestUtils into its own testFramework project
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13858 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -14,6 +14,7 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testing/src/test/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/main/webapp/WEB-INF/freemarker"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/main/webapp/css"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/testFramework/src/main/java"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
