--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -15,6 +15,7 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/main/webapp/WEB-INF/freemarker"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/application/src/main/webapp/css"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testFramework/src/main/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/testFramework/src/test/java"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
