Cosmetic changes on system info page.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13896 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -57,6 +57,10 @@
    border-bottom: 6px #FF9600 solid; 
 }
 
+#standardPageContent {
+	margin:0 0 0 200px;
+}
+	
 #homePageContent {
 	margin:0 0 0 200px;
 }
