--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -41,10 +41,6 @@
    text-align: left;
 }
 
-.left-pane-heading-group {
-	margin:0 0 0 10px;
-}
-
 .fontnormalboldorangeheading {
 
 	text-decoration:none; 
@@ -332,20 +328,24 @@ form.loan-product fieldset label{
 
 /* Left pane */
 
-#left-pane {
+.left-pane-heading-group {
+   margin:0 0 0 10px;
+}
+
+.left-pane {
    margin-top: 2px;
    float: left;
-   height: 400px;
+   height: 100%;
    background:#F2D1A6;
    width: 180px;
 }
 
-#left-pane-top-spacer {
+.left-pane-top-spacer {
    height: 3px;
    background-color: #FFFFFF;
 }
 
-#left-pane-header {
+.left-pane-header {
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 4px;
@@ -356,24 +356,24 @@ form.loan-product fieldset label{
    background-color:#FF9600;
    }
 
-#left-pane-content {
+.left-pane-content {
    padding-left: 5px;
    font-family: Arial, Verdana, Helvetica, sans-serif;
    font-size: 9pt;
 }
 
-#left-pane-content h2 {
+.left-pane-content h2 {
    padding-left: 5px;
    font-family: Arial, Verdana, Helvetica, sans-serif;
    font-size: 9pt;
 }
 
-#left-pane-content a {
+.left-pane-content a {
    font-weight: normal;
    font-size: 9pt;  
 }
 
-#content-pane {
+.content-pane {
    margin-top: 5px;
    margin-left: 5px; 
    width:800px;  
@@ -384,7 +384,7 @@ form.loan-product fieldset label{
 }
 
 /* create client page */
-#createClient form { 
+.createClient form { 
   font-family:verdana,arial,sans-serif;
   margin: 0;
   padding: 0;
