added deleteLoanProduct pages; fixed acceptance tests broken by id tag changes; removed unused log statements; added Eclipse validation exclude for testFramework/target
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13901 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/webapp/css/cssstyle.css
+++ b/application/src/main/webapp/css/cssstyle.css
@@ -390,7 +390,7 @@ form.loan-product fieldset label{
   padding: 0;
 }
 
-form fieldset.createClient {
+form fieldset.noborder {
   border-width: 1px;
   border-style: none;
   padding: 10px;
