updating eclipse build
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14076 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -16,6 +16,8 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testFramework/src/main/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testFramework/src/test/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/webapp/src/main/webapp/css"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTesting/src/test/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTesting/src/test/resources"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
