Added serviceInterfaces maven module. Renamed AppInfo to ApplicationInformationDto. This is work in progress which breaks the build (committing to hand off).
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14084 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -18,6 +18,7 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/webapp/src/main/webapp/css"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTesting/src/test/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTesting/src/test/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/serviceInterfaces/src/main/java"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
