corrected serviceInterfaces pom.xml to not include unneeded resources; fixed AppInfo refactoring problem; updated eclipse build to include serviceInterfaces
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14085 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -19,6 +19,8 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTesting/src/test/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTesting/src/test/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/serviceInterfaces/src/main/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/userInterface/src/test/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/userInterface/src/main/java"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
