updated eclipse settings to include freemarker pages in eclipse build
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14097 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -21,6 +21,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/serviceInterfaces/src/main/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/userInterface/src/test/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/userInterface/src/main/java"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/userInterface/src/main/resources"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
