created common/ module, moved some common files there:
* exceptions
* ClasspathResource.java

also updated Eclipse build system to use common/ module


git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@14260 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -24,6 +24,7 @@
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/testFramework/src/main/resources"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTests/src/test/java"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/acceptanceTests/src/test/resources"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/common/src/main/java"/>
 <property name="java-output-path"/>
         <property name="context-root" value="mifos"/>
 </wb-module>
